--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "agora-rtc-react": "^1.1.0",
+    "agora-rtc-sdk-ng": "^4.8.2",
+    "agora-rtm-sdk": "^1.4.4",
     "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
